<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="0px"
        android:layout_height="0px"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <ImageView
        android:id="@+id/imgView"
        android:layout_width="350dp"
        android:layout_height="98dp"
        android:layout_marginTop="80dp"
        android:src="@mipmap/ic_launcher_round" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textColorHint="@color/editTxt">

        <EditText
            android:id="@+id/account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:hint="@string/account"
            android:inputType="phone"
            android:theme="@style/EditLine" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textColorHint="@color/editTxt">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:theme="@style/EditLine" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="38dp"
        android:layout_marginRight="38dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/btn_bg_login"
        android:text="@string/login"
        android:textColor="@color/white" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="38dp"
        android:layout_marginRight="38dp"
        android:layout_marginTop="140dp"
        android:background="@drawable/btn_bg_login_weibo"
        android:text="微博登录"
        android:textColor="@color/white" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="38dp"
        android:layout_marginRight="38dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/btn_bg_login_facebook"
        android:text="Facebook"
        android:textColor="@color/white" />

</LinearLayout>